@@ -3,6 +3,7 @@
 ## 3.1 - Unreleased
 - Cut startup time in half by lazy loading optional modules
 - Adding support for tmux clipboard and cleaning clipboard code (by Stephen)
+- "copy" now default to "url" and works coherently 
 - BUGFIX: "info" was sometimes returning the wrong cleaning method
 - BUGFIX: history latest items was sometimes overwritten with multiple back/forward
 - PACKAGING: use hatch-requirements-txt (by link2xt)
